<resources>
    <!--Global-->
    <string name="app_name">Planner</string>
    <!--menu_list-->
    <string name="menu_list_item_action_search">Search</string>
    <string name="menu_list_item_action_filter">Active categories</string>
    <string name="menu_list_item_action_data">Delete database</string>
    <string name="stop_event_button_text">Stop Event</string>
    <string name="cd_search_results_list">List of categories</string>
    <string name="cd_stop_event_button">Stop event button</string>
    <string name="menu_list_hide_caption">This option is not available as long as Event is Active</string>
    <!--menu_category-->
    <string name="menu_category_item_action_events">Last events</string>
    <string name="menu_category_item_action_delete">Delete category</string>
    <!--fragment_category-->
    <string name="app_name_category">New category</string>
    <string name="category_name_cant_be_empty">Category name cannot be empty</string>
    <string name="new_category_name_label_deactivated">Category name:</string>
    <string name="new_category_name_label">Add category name:</string>
    <string name="new_category_search_label">Parent category:</string>
    <string name="new_category_time_label">Events time for this category:</string>
    <!--Widget-->
    <string name="widget_title">There is active event for: %1$s category</string>
    <string name="widget_title_empty">No active events</string>


    <string name="AlertDialor_chooser_title">What you can do here:</string>
    <string name="data_has_been_deleted">Data has been deleted</string>
    <string name="problems">There was a problem to delete data</string>
    <string name="toast_All_categories">All categories</string>
    <string name="toast_only_active_categories">Only active categories</string>
    <string name="app_name_category_details">Details</string>
    <string name="cd_fab_list">Create new category</string>
    <string name="cd_fab_category">Save category</string>
</resources>
