<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.list.ListActivity">

    <item android:id="@+id/menu_list_item_action_search"
        android:title="@string/menu_list_item_action_search"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/menu_list_item_action_filter"
        android:orderInCategory="100"
        android:icon="@android:drawable/checkbox_off_background"
        android:title="@string/menu_list_item_action_filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_list_item_action_data"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_list_item_action_data"
        app:showAsAction="always" />
</menu>
