<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list.ListActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_list"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?android:attr/colorPrimary"
            android:elevation="@dimen/button_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_list" />

    <Button
        android:id="@+id/stop_event_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cd_stop_event_button"
        android:text="@string/stop_event_button_text"
        android:textStyle="bold"
        android:background="@color/colorStopEventButtonBackground"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="gravity"
        android:elevation="@dimen/button_elevation"
        android:layout_margin="@dimen/button_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/cd_fab_list"
        android:layout_margin="@dimen/fab_margin"
        android:elevation="@dimen/fab_elevation"
        app:srcCompat="@android:drawable/ic_input_add" />

</android.support.design.widget.CoordinatorLayout>